--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
 
 <body>
-	Hallo Sandefjord!
+	Hallo Folkens!
 
 
-	<br>
-	<br>
+	
+	<div id="header" style=width:500px;background-color:grey;> </div></div>
 
-	Hallo fra <b>Einar</b>
+	Hallo fra <b>Hans</b>
+	<h1>Dette er Kodeklubben i Sandefjord</h1>
+	<img src="http://bergenbibliotek.no/spill/digital-arena/kodeklubben.png/image_preview">
 
 </body>
 
