--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	Hallo fra <b>Hans</b>
 	<h1>Dette er Kodeklubben i Sandefjord</h1>
+	<div id="header" style=width:500px;background-color:grey;><h1>Dette er Kodeklubben i Sandefjord</h1> </div></div>
 	<img src="http://bergenbibliotek.no/spill/digital-arena/kodeklubben.png/image_preview">
 
 </body>
