--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <body>
 
 	<div id="header" style=width:500px;background-color:#0066FF;><h1>Sandefjord Kodeklubb</h1></div>
+	<img src="http://bergenbibliotek.no/spill/digital-arena/kodeklubben.png/image_preview">
         
 
 	<br>
-	Hallo i fra Sandefjord Kodeklubb
-	
+	Hallo Sandefjord
 	
 	<br>
 	
-	Hallo enda en gang
+	
 
 </body>
 
